overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,6 @@
-/* *{
-  box-sizing: border-box;
-} */
- 
-
- * {
+ *{
    margin: 0;
    padding: 0;
-   font-family: Poppins;    
+   font-family: Poppins;   
+    overflow-x: hidden; 
 }
